proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/func_basic.py
x = [1, 2]
print sum(x)
print max([1, 2, 3, max([4, 1])])
